<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/existing_cus"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="43dp" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/tv_showmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/tv_to_resetpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forpw_msg"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/newcus"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_tosignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_acct" />

</LinearLayout>