<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".products.category.CategoryActivity"
    tools:layout_editor_absoluteY="25dp">

    <steelkiwi.com.library.DotsLoaderView
        android:id="@+id/dotsLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:dlv_item_drawable="@drawable/circle_background"
        app:dlv_line_color="@color/colorAccent"
        >
    </steelkiwi.com.library.DotsLoaderView>

    <include layout="@layout/bar_header_category" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.mikki.zaramimic.products.category.CategoryFragment"
        android:layout_width="match_parent"
        android:layout_height="570dp" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tablay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="521dp">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_myacct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right" />
    </android.support.design.widget.TabLayout>



</LinearLayout>